# elastic-vis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml  pypi.yml  tests.yml
docs/source/: conf.py  index.rst
docs/source/api/: modules.rst
elastic_vis/: __init__.py  cli.py  core.py  plotting.py
examples/: matrix.txt  style.json
tests/: test_cli.py  test_core.py
